Initial working implementation that allows two humans to play a traditional game. No AI player yet.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,12 @@
 [workspace]
 resolver = "2"
 members = [
-    "dominoes-gamestate",
-    "dominoes-player",
+    "dominoes-state",
     "game",
     "human-player",
-    "player"
+    "player",
+    "rules"
 ]
+
+[profile.dev]
+debug = true
