--- a/dominoes-player/Cargo.toml
+++ b/dominoes-player/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "dominoes-player"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
+dominoes-state = { path = "../dominoes-state"}
 player = { path = "../player" }
+rules = { path = "../rules" }
