--- a/player/Cargo.toml
+++ b/player/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "player"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
+dominoes-state = { path = "../dominoes-state" }
+rules = { path = "../rules" }
