--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [workspace]
 resolver = "2"
 members = [
+    "dominoes-player",
     "dominoes-state",
     "game",
+    "hidden-game-player",
     "human-player",
     "player",
     "rules"
