--- a/dominoes-player/Cargo.toml
+++ b/dominoes-player/Cargo.toml
@@ -5,5 +5,8 @@ edition = "2024"
 
 [dependencies]
 dominoes-state = { path = "../dominoes-state"}
+hidden-game-player = { path = "../hidden-game-player"}
 player = { path = "../player" }
+rand = "0.9"
 rules = { path = "../rules" }
+static_assertions = "1.1"
