--- a/dominoes-state/Cargo.toml
+++ b/dominoes-state/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ego-tree = "0.10"
 hidden-game-player = { path = "../hidden-game-player" }
-multimap = "0.8"
+multimap = "0.10"
 rand = "0.9"
 rand_chacha = "0.9"
 rules = { path = "../rules" }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
