Added the visualize utility

--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2024"
 clap = "4.5"
 dominoes-player = { path = "../dominoes-player" }
 dominoes-state = { path = "../dominoes-state" }
-ego-tree = "0.10"
+ego-tree = { version = "0.10", features=["serde"] }
 hidden-game-player = { path = "../hidden-game-player" }
 human-player = { path = "../human-player" }
+iced = { version = "0.13", features = ["canvas", "image"] }
 player = { path = "../player" }
 regex = "1.11"
 rules = { path = "../rules" }
