--- a/rules/Cargo.toml
+++ b/rules/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+ego-tree = "0.10"
+multimap = "0.10"
+rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
