--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,6 +5,7 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
@@ -22,11 +23,39 @@ jobs:
         fetch-depth: 0             # get full history
         persist-credentials: true  # allow use of $GITHUB_TOKEN for submodule fetch
         token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Cache Cargo registry and target
+      uses: actions/cache@v4
+      with:
+        path:
+          target
+          ~/.cargo/registry
+          ~/.cargo/git
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
     - name: Init and update submodules
       run: |
         git submodule sync --recursive
         git submodule update --init --recursive
+
+    - name: Check code formatting
+      run: cargo fmt --all -- --check
+
+    - name: Lint with Clippy
+      run: cargo clippy --all-targets --all-features -- -D warnings
+
     - name: Build
       run: cargo build --verbose
+
     - name: Run tests
       run: cargo test --verbose
+
+    - name: Generate code coverage
+      run: cargo install cargo-tarpaulin && cargo tarpaulin --out Xml
+      continue-on-error: true
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        files: tarpaulin-report.xml
+        fail_ci_if_error: false
